# Python-Converse-Mapper

./: .flake8  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
converse_mapper/: __init__.py  bedrock_client.py  config.py  content_mappers.py  doc.py  mappers.py  models.py  transformer.py
converse_mapper/config/ai21/: v1.yml
converse_mapper/config/amazon/: v1.yml
converse_mapper/config/anthropic/: v1.yml
converse_mapper/config/cohere/: v1.yml
converse_mapper/config/deepseek/: v1.yml
converse_mapper/config/jumpstart/: v1.yml
converse_mapper/config/meta/: v1.yml
converse_mapper/config/mistral/: v1.yml
converse_mapper/config/qwen/: v1.yml
converse_mapper/config/writer/: v1.yml
docs/: CONVERSE-SPEC.md  PROVIDER-CONFIG.md
examples/: bedrock_demo.py  comprehensive_demo.py  multi_provider_demo.py  quickstart.py
tests/: test_bedrock_client.py  test_config.py  test_content_mappers.py  test_doc.py  test_init.py  test_integration.py  test_mappers.py  test_models.py  test_transformer.py
